@@ -271,6 +271,26 @@ class Test_simulate_Simulator(unittest.TestCase):
         # Delete output files
         s.deleteOutputFiles()
 
+    def test_timeout(self, timeout=3):
+        model = 'MyModelicaLibrary.MyModelTimeOut'
+        json_log_file = '{}_buildingspy.json'.format(model.replace('.', '_'))
+        s = Simulator(
+            model,
+            packagePath=self._packagePath
+        )
+        s._deleteTemporaryDirectory = False
+        outDir = os.path.abspath(s.getOutputDirectory())
+        s.setTimeOut(timeout)
+        s.simulate()
+        with open(os.path.join(outDir, json_log_file)) as fh:
+            log = fh.read()
+        self.assertTrue('RuntimeError: Process timeout' in log)
+        s.setTimeOut(-1)
+        s.simulate()
+        with open(os.path.join(outDir, json_log_file)) as fh:
+            log = fh.read()
+        self.assertFalse('"success": false' in log)
+
 
 if __name__ == '__main__':
     unittest.main()
